# erbf

./: README.md  pyproject.toml
examples/: optuna_tuning.py
src/erbf/: __init__.py  activations.py  auto_params.py  base.py  center_initialization.py  local_analysis.py  regressor.py  width_initialization.py  width_optimization.py
tests/: test_components.py  test_regressor.py  test_sklearn_compliance_03feb26.py
