[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erbf"
version = "0.1.0"
description = "Ellipsoidal RBF network regressor with gradient-optimized anisotropic widths"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Luciano Gerber", email = "L.Gerber@mmu.ac.uk"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "numba>=0.55",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/gerberl/erbf"
Issues = "https://github.com/gerberl/erbf/issues"

[tool.setuptools.packages.find]
where = ["src"]
